--- a/alpha/css/status.css
+++ b/alpha/css/status.css
@@ -16,10 +16,11 @@ nav {
     /* flex: 1; */
     display: flex;
     flex-direction: column;
-    height: calc(59.75rem - 10.5rem);
+    height: calc(59.75rem - 12rem);
     justify-content: space-between;
     
     margin-top: 6rem;
+    margin-bottom: 2rem;
     /* transform: translateY(2rem); */
     z-index: 40;
     
@@ -78,6 +79,7 @@ h2, h4 {
     background-color: white;
 
     z-index: 100;
+
 
 }
 
